<resources>
    <string name="app_name">kaoyan</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_postDetail">订单详情</string>
    <string name="title_activity_create_new_post">新建帖子</string>
    <string name="title_activity_clock_in">打卡</string>
    <string name="title_activity_mine_collectionList">收藏列表</string>

    <string name="text_login_hint">请先登陆</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_user_name" >UserName</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login">登陆</string>
    <string name="trans_activity_login">前往登陆</string>
    <string name="action_register">注册</string>
    <string name="trans_activity_register">没有账号，注册一个</string>
    <string name="action_logout">注销</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="button_mine_radio">个人中心</string>
    <string name="button_square_radio">广场</string>
    <string name="button_message_radio">消息</string>
    <string name="button_post_radio">帖子管理</string>
    <string name="button_change_user_info">修改个人信息</string>
    <string name="button_clockIn">打卡</string>
    <string name="prompt_male">男</string>
    <string name="prompt_female">女</string>
    <string name="prompt_targetProfession">目标专业</string>
    <string name="prompt_targetSchool">目标学校</string>
    <string name="button_confirm">确认提交</string>
    <string name="button_create_comment_action">添加评论</string>
    <string name="button_admire">点赞</string>
    <string name="button_collect">收藏</string>
    <string name="button_delete_post">删除</string>
    <string name="button_confirm_create_new_post">发帖</string>
    <string name="button_mine_collections">我的收藏</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
