<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">


    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_logout" />

    <Button
        android:id="@+id/change_user_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_change_user_info"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp" />

    <Button
        android:id="@+id/clockIn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clockIn"
        android:layout_marginTop="40dp"/>

</FrameLayout>